fix shop all menu label spacing

--- a/src/styl/responsive/mobile.styl
+++ b/src/styl/responsive/mobile.styl
@@ -286,6 +286,7 @@ img,
 #shop-menu-list li:first-of-type
   .shop-menu-label
     margin: 0
+    margin-bottom: $margin-small
 
 .shop-menu-label
   margin-left: $margin-tiny
