--- a/src/styl/responsive/tablet-landscape.styl
+++ b/src/styl/responsive/tablet-landscape.styl
@@ -124,6 +124,10 @@
     font-size: $font-size-basic
     font-weight: normal
 
+  #shop-menu-list li:first-of-type
+    .shop-menu-label
+      margin-bottom: 0
+
   .shop-sub-menu
     position: fixed
     width: 100%
